<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/scrollViewReply">

                <ExpandableListView
                    android:id="@+id/expandableListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/view"
                    android:childDivider="@drawable/shape_empty"
                    android:clipToPadding="false"
                    android:footerDividersEnabled="true"
                    android:groupIndicator="@color/colorAccent"
                    android:headerDividersEnabled="true"
                    android:paddingBottom="80dp" />
            </android.support.v4.widget.SwipeRefreshLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:tint="@color/colorGrayLight"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_reply_black_24dp"
                tools:ignore="RelativeOverlap" />

            <ScrollView
                android:id="@+id/scrollViewReply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@color/windowBackground"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="top"
                        android:background="#E0E0E0" />

                    <TextView
                        android:id="@+id/textViewPreviewMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="top"
                        android:background="#E0E0E0" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/windowBackground"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editTextReply"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toLeftOf="@+id/buttonReply"
                            android:layout_toStartOf="@+id/buttonReply"
                            android:hint="@string/reply"
                            android:inputType="textMultiLine|textCapSentences" />

                        <ImageButton
                            android:id="@+id/buttonReply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_margin="8dp"
                            android:background="@color/transparent"
                            android:contentDescription="@string/icon_reply"
                            android:onClick="newMessage"
                            android:padding="2dp"
                            android:src="@drawable/ic_reply_black_24dp"
                            android:tint="@color/colorGrayTint" />

                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        app:headerLayout="@layout/_header_main"
        app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>
