...
    <string name="about_poeditor">"Project on POEditor"</string>
    <string name="about_report_bug">"Report bug"</string>
    <string name="about_show_introduction">"Show Introduction"</string>
    <string name="about_version">"Version"</string>
    <string name="about_view_source">"View source"</string>
    <string name="accessibility_navigation_drawer_close">"Close navigation drawer"</string>
    <string name="accessibility_navigation_drawer_open">"Open navigation drawer"</string>

    <!-- Fuzzy -->
    <string name="app_name">"Intra 42"</string>

    <!-- Format warning -->
    <string name="booking_correct_login">"You will review _login_'s project at _date_."</string>
...
    <string name="quest_status_unknown">"Unknown"</string>
    <string name="quest_validated">"Success"</string>
    <string name="readme">"Readme"</string>
    <string name="refresh">"Refresh"</string>
    <string name="refreshing">"Refreshing"</string>
    <string name="retry">"Retry"</string>
    <string name="save">"Save"</string>

    <!-- Short word (under 6 char) -->
    <string name="save_short">"Save"</string>
    <string name="search_by">"Search by"</string>
    <string name="search_error_on_open_this_element">"Error on opening this element"</string>
    <string name="search_hint">"Search"</string>
...
