<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionDelete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSave"
        android:title="@string/save_short"
        app:showAsAction="ifRoom" />
</menu>